	PR ld/14170 	* elflink.c (_bfd_elf_merge_symbol): When a symbol defined in 	a dynamic library finds a new instance with non-default 	visibility in a regular object, correctly handle symbols 	already on the undefs list and undo dynamic symbol state when 	the new symbol is hidden or internal.